# AutoQ-Para

./: Dockerfile  README.md
automata/: swta-all-bases.vtf  swta-zero-bases.vtf  wtt-hadamard-all.vtf  wtt-phase-shift-1.vtf  wtt-phase-shift-2.vtf
benchmarks/: adder-cdkm.qasm  bv-10star.qasm  bv-all.qasm  ghz-elevator.qasm  ghz-stairs.qasm  grover.qasm  hxh.qasm  qft.qasm  z.qasm
lib/: ASTBuilder.cpp  ASTBuilder.hpp  ASTNode.hpp
lib/g4/: qasm3Lexer.cpp  qasm3Lexer.g4  qasm3Lexer.h  qasm3Parser.cpp  qasm3Parser.g4  qasm3Parser.h  qasm3ParserBaseListener.cpp  qasm3ParserBaseListener.h  qasm3ParserBaseVisitor.cpp  qasm3ParserBaseVisitor.h  qasm3ParserListener.cpp  qasm3ParserListener.h  qasm3ParserVisitor.cpp  qasm3ParserVisitor.h
python_prototype/src/tests/: test_arith.py  test_bv_examle.py  test_weighted_automata.py
src/: CMakeLists.txt  arith.cpp  arith.hpp  basics.hpp  bit_set.cpp  bit_set.hpp  experiments.cpp  nfa.cpp  nfa.hpp  predefined_automata.cpp  predefined_automata.hpp  predefined_wtts.cpp  predefined_wtts.hpp  quantum_program.cpp  quantum_program.hpp  runner.cpp  swta.cpp  swta.hpp  swta_builders.cpp  swta_builders.hpp  synth.cpp  synth.hpp  tests.cpp  weighted_automata.cpp  weighted_automata.hpp
src/swta/: extended_ring_arith.py  weighted_automata.py
